--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -1,4 +1,4 @@
-name: Python Autopep8 Check
+name: Autopep8 Formatting
 
 on:
   push:
@@ -9,30 +9,32 @@ on:
       - main
 
 jobs:
-  autopep8:
+  format:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
-          python-version: '3.x'  # Replace with your Python version
+          python-version: '3.x'
 
-      - name: Install autopep8
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install autopep8
 
       - name: Run autopep8
         run: |
-          autopep8 --in-place --aggressive --recursive .
+          autopep8 --in-place --aggressive --aggressive .
 
       - name: Commit changes
+        if: github.event_name == 'push'
         run: |
-          git config --global user.email "your-email@example.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions"
           git add .
-          git commit -m "autopep8 formatting" || echo "No changes to commit"
+          git commit -m "Apply autopep8 formatting" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
