changes to yml file

--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run autopep8
         run: |
-          autopep8 --in-place --aggressive --aggressive .
+          autopep8 --in-place --aggressive --aggressive --recursive -v .
 
       - name: Commit changes
         if: github.event_name == 'push'
