--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           pip install autopep8
           pip install pytest
+          pip install -r requirements.txt
+          pip install pylint pyright bandit
 
       - name: Run autopep8
         run: |
